:lipstick: Add style to forms

--- a/templates/monitor/new.html.twig
+++ b/templates/monitor/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouveau Moniteur | {{ parent() }}{% endblock %}
 
 {% block body %}
-    <h1>Créer un moniteur</h1>
+    <h1 class="text-center">Créer un moniteur</h1>
 
     <section class="wrapper wrapper-style grid gap-4 lg:gap-6">
 
