--- a/templates/record/new.html.twig
+++ b/templates/record/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouveau record | {{ parent() }}{% endblock %}
 
 {% block body %}
-    <h1>Créer un record</h1>
+    <h1 class="text-center">Créer un record</h1>
 
     <section class="wrapper wrapper-style">
         {{ include('record/includes/_form.html.twig') }}
