:lipstick: Fix title alignement + images coming soon

--- a/templates/home/coming_soon.html.twig
+++ b/templates/home/coming_soon.html.twig
@@ -5,5 +5,5 @@
 {% block body %}
     <h1 class="text-center">Bientôt les statistiques des ressources !</h1>
 
-    <img class="rounded-lg m-auto w-92" src="{{ asset("documentation/chartblur.png") }}" alt="Image graphique ventes">
+    <img class="rounded-lg m-auto w-92" src="{{ asset("uploads/chartblur.png") }}" alt="Image graphique ventes">
 {% endblock %}
