--- a/templates/record/edit.html.twig
+++ b/templates/record/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Editer record | {{ parent() }}{% endblock %}
 
 {% block body %}
-    <h1>Editer un record</h1>
+    <h1 class="text-center">Editer un record</h1>
 
     <section class="wrapper wrapper-style">
         {{ include('record/_form.html.twig') }}
