--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -1,34 +1,40 @@
 .form {
 
-  //Form Wrapper
-  &-wrapper {
-    @apply space-y-4 md:space-y-6;
+  &-input,
+  &-submit,
+  &-checkbox {
+    @apply transition duration-500 placeholder-gray-300 dark:placeholder-gray-600 rounded-lg;
   }
 
-  //Form Submit
+  //Form Wrapper
+  &-wrapper {
+    @apply grid lg:gap-6 gap-4;
+  }
+
+  //Form Input
   &-input {
-    @apply bg-gray-100 border border-gray-300 sm:text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 appearance-none bg-opacity-50;
+    @apply bg-gray-200 border border-gray-300 dark:border-gray-600 sm:text-sm block w-full p-2.5 dark:bg-gray-900 appearance-none bg-opacity-50;
 
     &:focus {
-      @apply ring-primary-600 border-primary-600 dark:ring-blue-500 dark:border-blue-500;
+      @apply ring-primary-400 border-primary-400;
     }
   }
 
   //Form Submit
   &-submit {
-    @apply inline-block text-white transition duration-300 bg-primary-600 font-medium rounded-lg text-lg px-8 py-2.5 text-center dark:bg-primary-600;
+    @apply inline-block text-white bg-primary-400 font-medium text-lg px-8 py-2.5 text-center;
 
     &:focus {
-      @apply ring-4 outline-none ring-primary-300 dark:ring-primary-800;
+      @apply outline-none ring-primary-400;
     }
 
     &:hover {
-      @apply transition duration-300 bg-primary-700 dark:bg-primary-700;
+      @apply bg-primary-600;
     }
   }
 
   &-label {
-    @apply block font-medium mb-2 text-lg family;
+    @apply block font-semibold text-sm;
 
     &.required:after {
       content: " *";
@@ -37,7 +43,7 @@
   }
 
   &-checkbox {
-    @apply w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-4 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800;
+    @apply text-primary-400 border border-gray-300 bg-gray-300 focus:ring focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800;
   }
 }
 
@@ -45,10 +51,5 @@
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
-  margin: 0;
-}
-
-input[type="file"] {
-  @apply bg-none rounded-lg;
   margin: 0;
 }
