--- a/templates/sale/includes/_form.html.twig
+++ b/templates/sale/includes/_form.html.twig
@@ -1,41 +1,14 @@
-{{ form_start(form, {'attr': {'class': 'grid lg:gap-6 gap-4'}}) }}
-
-
-
+{{ form_start(form, {'attr': {'class': 'form-wrapper'}}) }}
 <div class="grid lg:grid-cols-2 gap-4 lg:gap-6">
     <div class="lg:col-span-2">
-        {{ form_label(form.resource, 'Choisissez la ressource ', {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.resource) }}
+        {{ form_row(form.resource) }}
     </div>
 
-    <div>
-        {{ form_label(form.buyPrice, 'Prix d\'achat', {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.buyPrice) }}
-    </div>
-
-    <div>
-        {{ form_label(form.sellPrice, 'Prix de vente', {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.sellPrice) }}
-    </div>
-
-    <div>
-        {{ form_label(form.buyDate, 'Date d\'achat', {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.buyDate) }}
-    </div>
-
-    <div>
-        {{ form_label(form.sellDate, 'Date de vente', {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.sellDate) }}
-    </div>
-
-    <div>
-        {{ form_label(form.isSell, 'Vendu', {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.isSell) }}
-    </div>
-
-    <div class="flex justify-center lg:col-span-2">
-        <button class="form-submit">{{ button_label|default('Créer') }}</button>
-    </div>
-
+    {{ form_row(form.buyPrice) }}
+    {{ form_row(form.sellPrice) }}
+    {{ form_row(form.buyDate) }}
+    {{ form_row(form.sellDate) }}
+    {{ form_row(form.isSell) }}
+    {{ form_widget(form.submit) }}
 </div>
 {{ form_end(form) }}
