--- a/assets/styles/components/_tomSelect.scss
+++ b/assets/styles/components/_tomSelect.scss
@@ -3,11 +3,11 @@
 }
 
 .ts-dropdown-content > div {
-  @apply dark:text-white drop-shadow-lg bg-white dark:bg-gray-700 p-4;
+  @apply dark:text-white drop-shadow-lg bg-white dark:bg-gray-900 p-4;
 }
 
 .ts-dropdown [data-selectable].option {
-  @apply dark:text-white drop-shadow-lg bg-gray-100 dark:bg-gray-700 p-4 dark:hover:bg-gray-800 hover:bg-gray-200 cursor-pointer bg-opacity-50 dark:bg-opacity-100;
+  @apply dark:text-white drop-shadow-lg bg-gray-100 dark:bg-gray-900 p-4 dark:hover:bg-gray-800 hover:bg-gray-200 cursor-pointer bg-opacity-50 dark:bg-opacity-100;
 }
 .ts-wrapper.single.input-active .ts-control, .ts-wrapper.single.input-active .ts-control input {
   @apply dark:text-white shadow-none rounded-lg;
@@ -17,6 +17,14 @@
   @apply dark:text-white bg-none bg-gray-100 p-4 dark:hover:bg-gray-800 hover:bg-gray-200 rounded-lg shadow-none;
 }
 
+.ts-dropdown.single {
+  @apply overflow-hidden;
+}
+
 .dark .ts-wrapper.single .ts-control {
-   @apply bg-gray-700;
- }
+  @apply bg-gray-900 hover:bg-gray-700 transition duration-300 border border-gray-600 p-2.5 #{!important};
+}
+
+.ts-wrapper.single .ts-control {
+  @apply bg-gray-100 hover:bg-white border-gray-300 p-2.5 #{!important};
+}
