--- a/templates/monitor/new.html.twig
+++ b/templates/monitor/new.html.twig
@@ -7,7 +7,7 @@
 
     <section class="wrapper wrapper-style grid gap-4 lg:gap-6">
 
-        {{ include('monitor/_form.html.twig') }}
+        {{ include('monitor/includes/_form.html.twig') }}
 
         <div class="flex justify-center">
             <a class="form-submit" href="{{ path('app_monitor_index') }}">Retour</a>
