--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -13,7 +13,7 @@
 
   //Form Input
   &-input {
-    @apply bg-gray-200 border border-gray-300 dark:border-gray-600 sm:text-sm block w-full p-2.5 dark:bg-gray-900 appearance-none bg-opacity-50;
+    @apply bg-gray-200 dark:text-gray-100 border border-gray-300 dark:border-gray-600 block w-full p-2.5 dark:bg-gray-900 appearance-none bg-opacity-50 hover:bg-white dark:hover:bg-gray-800 text-sm;
 
     &:focus {
       @apply ring-primary-400 border-primary-400;
@@ -34,7 +34,7 @@
   }
 
   &-label {
-    @apply block font-semibold text-sm;
+    @apply block text-sm tracking-wide font-semibold;
 
     &.required:after {
       content: " *";
@@ -43,7 +43,7 @@
   }
 
   &-checkbox {
-    @apply text-primary-400 border border-gray-300 bg-gray-300 focus:ring focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800;
+    @apply text-primary-400 border border-gray-300 bg-gray-200 focus:ring focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800;
   }
 }
 
