--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -13,7 +13,7 @@
 
   //Form Input
   &-input {
-    @apply bg-gray-200 dark:text-gray-100 border border-gray-300 dark:border-gray-600 block w-full p-2.5 dark:bg-gray-900 appearance-none bg-opacity-50 hover:bg-white dark:hover:bg-gray-800 text-sm;
+    @apply bg-gray-100 dark:bg-gray-900 dark:text-gray-100 border border-gray-300 dark:border-gray-600 block w-full p-2.5 appearance-none hover:bg-white dark:hover:bg-gray-800 text-sm;
 
     &:focus {
       @apply ring-primary-400 border-primary-400;
