:lipstick: Documentation style

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,7 +51,7 @@
     <div {{ react_component('ThemeToggle') }}></div>
     {% include('includes/sidebar.html.twig') %}
     {% include('includes/footer.html.twig') %}
-    <section class="flex-1 w-[calc(100%-74px)] p-4 space-y-4 md:space-y-6">
+    <section class="flex-1 w-[calc(100%-74px)] p-4 space-y-4 md:space-y-6 pb-8">
         {% include('includes/navbar.html.twig') %}
         {% block body %}
 
