--- a/templates/documentation/includes/_resources.html.twig
+++ b/templates/documentation/includes/_resources.html.twig
@@ -1,11 +1,11 @@
-<div id="section1" class="grid gap-8">
-    <h2 class="text-primary-400 dark:text-primary-400 text-4xl font-semibold mb-3">Ressources</h2>
+<div class="tab-pane active">
+    <h2>Ressources</h2>
     <p>Le <strong>principe des ressources</strong> permet au joueur d'analyser l'évolution des prix au fil du temps. Cela offre une vision claire de la dynamique du marché.</p>
 
     <p>Sur la page des ressources, si un moniteur est déjà configuré, vous verrez une présentation semblable à celle-ci :</p>
-    <img class="rounded-lg" src="{{ asset('documentation/resource_card.webp') }}" alt="Image d'une carte de ressource">
+    <img src="{{ asset('documentation/resource_card.webp') }}" alt="Image d'une carte de ressource">
 
-    <p>Ces données représentent la moyenne des prix calculée à partir de tout les moniteurs pour une ressource donnée.</p>
+    <p>Ces données représentent la moyenne des prix calculée à partir de tous les moniteurs pour une ressource donnée.</p>
     <p>Par exemple, la moyenne des prix pour la ressource <em>"Épée de boisaille"</em> en lots de 1, 10 et 100 est respectivement de 6, 892 et 9786 kamas.</p>
     <p>L'ajout de davantage de moniteurs pour une ressource spécifique permet d'obtenir des valeurs plus précises et fiables.</p>
 
@@ -17,7 +17,7 @@
 
 
     <p>Vous pouvez créer un nouveau moniteur en utilisant le bouton suivant :</p>
-    <img class="rounded-lg" src="{{ asset('documentation/monitor_button.webp') }}" alt="Image d'un bouton de création de moniteur">
+    <img src="{{ asset('documentation/monitor_button.webp') }}" alt="Image d'un bouton de création de moniteur">
 
     {#<div class="bg-yellow-100 p-4 rounded-lg mb-3 text-yellow-600 ">
         <span class="text-md font-semibold uppercase">⚠️ Attention ⚠️</span>
