--- a/templates/documentation/includes/_sales.html.twig
+++ b/templates/documentation/includes/_sales.html.twig
@@ -1,61 +1,67 @@
-<div id="section3" class="grid gap-8">
-    <h2 class="text-primary-400 dark:text-primary-400 text-4xl font-semibold mb-3">Ventes</h2>
-    <div class="grid gap-8">
-        <p>Principe des ventes : Les ventes sont un historique de vos achats. Vous n'avez qu'à sélectionner le bon item, renseigner le prix d'achat et de vente :</p>
-        <img class="rounded-lg" src="{{ asset('documentation/sale_new.webp') }}" alt="Image page ajouter vente">
-        <p>Vous pourrez modifiez n'importe quelle vente plus tard.</p>
-        <p>Les valeurs <strong class="text-red-400">obligatoires</strong> sont <strong class="text-green-400">l'item</strong>, et le <strong class="text-green-400">prix d'achat</strong></p>
-        <p>L'application se charge de calculer les différentes valeurs automatiquement. Et vous retrouvez un historique de vos achats avec la possibilité de <strong class="text-green-400">modifier</strong> ou de <strong class="text-red-400">supprimer</strong> :</p>
-        <img class="rounded-lg" src="{{ asset('documentation/sale_table.webp') }}" alt="Image tables ventes">
+<div class="tab-pane">
+    <h2>Ventes</h2>
+    <p>Principe des ventes : Les ventes sont un historique de vos achats. Vous n'avez qu'à sélectionner le bon item, renseigner le prix d'achat et de vente :</p>
+    <img src="{{ asset('documentation/sale_new.webp') }}" alt="Image page ajouter vente">
+    <p>Vous pourrez modifiez n'importe quelle vente plus tard.</p>
+    <p>Les valeurs obligatoires sont l'item, et le prix d'achat</p>
+    <p>L'application se charge de calculer les différentes valeurs automatiquement. Et vous retrouvez un historique de vos achats avec la possibilité de modifier ou de supprimer :</p>
+    <img src="{{ asset('documentation/sale_table.webp') }}" alt="Image tables ventes">
+
+    <h3>Explication items du panel :</h3>
+    <div class="flex items-center space-x-2">
+        <img class="w-72" src="{{ asset('documentation/profit.webp') }}" alt="Image card Profit">
+        <p>
+            <span class="text-tertiary-400 dark:text-tertiary-400">Profit :</span>
+            Le profit représente la totalité des kamas que vous avez gagné (uniquement les items marqués vendus).
+        </p>
     </div>
-
-    <p>Explication items du panel :</p>
-
-    <div class="grid gap-4">
-        <img class="rounded-lg" src="{{ asset('documentation/profit.webp') }}" alt="Image card Profit">
-        <h3 class="text-xl underline">Profit :</h3>
-        <p>Le profit représente la totalité des kamas que vous avez gagné (uniquement les items marqués vendus).</p>
+    <div class="flex items-center space-x-2">
+        <img class="w-72" src="{{ asset('documentation/profit_percent.webp') }}" alt="Image card Profit %">
+        <p>
+            <span class="text-tertiary-400 dark:text-tertiary-400">Profit % :</span>
+            Le profit % représente le pourcentage total de profit que vous avez réalisé (uniquement les items marqués vendus).
+        </p>
     </div>
-
-    <div class="grid gap-4">
-        <img class="rounded-lg" src="{{ asset('documentation/profit_percent.webp') }}" alt="Image card Profit %">
-        <h3 class="text-xl underline">Profit % :</h3>
-        <p>Le profit % représente le pourcentage total de profit que vous avez réalisé (uniquement les items marqués vendus).</p>
+    <div class="flex items-center space-x-2">
+        <img class="w-72" src="{{ asset('documentation/profit_pending.webp') }}" alt="Image card Profit en attente">
+        <p>
+            <span class="text-tertiary-400 dark:text-tertiary-400">Profit en attente :</span>
+            Le profit en attente représente la totalité des kamas qu'il vous reste à gagner.
+        </p>
     </div>
-
-    <div class="grid gap-4">
-        <img class="rounded-lg" src="{{ asset('documentation/profit_pending.webp') }}" alt="Image card Profit en attente">
-        <h3 class="text-xl underline">Profit en attente :</h3>
-        <p>Le profit en attente représente la totalité des kamas qu'il vous reste à gagner.</p>
+    <div class="flex items-center space-x-2">
+        <img class="w-72" src="{{ asset('documentation/total_items.webp') }}" alt="Image card Total items">
+        <p>
+            <span class="text-tertiary-400 dark:text-tertiary-400">Total items :</span>
+            Total items représente le nombre d'items mis en vente.
+        </p>
     </div>
-
-    <div class="grid gap-4">
-        <img class="rounded-lg" src="{{ asset('documentation/total_items.webp') }}" alt="Image card Total items">
-        <h3 class="text-xl underline">Total items :</h3>
-        <p>Total items représente le nombre d'items mis en vente.</p>
+    <div class="flex items-center space-x-2">
+        <img class="w-72" src="{{ asset('documentation/total_items_sell.webp') }}" alt="Image card Total items vendus">
+        <p>
+            <span class="text-tertiary-400 dark:text-tertiary-400">Total items vendus :</span>
+            Total items vendus représente le nombre d'items vendus (uniquement les items marqués vendus).
+        </p>
     </div>
-
-    <div class="grid gap-4">
-        <img class="rounded-lg" src="{{ asset('documentation/total_items_sell.webp') }}" alt="Image card Total items vendus">
-        <h3 class="text-xl underline">Total items vendus :</h3>
-        <p>Total items vendus représente le nombre d'items vendus (uniquement les items marqués vendus).</p>
+    <div class="flex items-center space-x-2">
+        <img class="w-72" src="{{ asset('documentation/invested.webp') }}" alt="Image card Investi">
+        <p>
+            <span class="text-tertiary-400 dark:text-tertiary-400">Investi :</span>
+            Investi représente le nombre de kamas dépensés dans l'achat/revente
+        </p>
     </div>
-
-    <div class="grid gap-4">
-        <img class="rounded-lg" src="{{ asset('documentation/invested.webp') }}" alt="Image card Investi">
-        <h3 class="text-xl underline">Investi :</h3>
-        <p>Investi représente le nombre de kamas dépensés dans l'achat/revente</p>
+    <div class="flex items-center space-x-2">
+        <img class="w-72" src="{{ asset('documentation/taxe.webp') }}" alt="Image card Taxe">
+        <p>
+            <span class="text-tertiary-400 dark:text-tertiary-400">Taxe :</span>
+            La taxe représente les kamas dépensés lors de la mise en vente en HDV (uniquement les items marqués vendus).
+        </p>
     </div>
-
-    <div class="grid gap-4">
-        <img class="rounded-lg" src="{{ asset('documentation/taxe.webp') }}" alt="Image card Taxe">
-        <h3 class="text-xl underline">Taxe :</h3>
-        <p>La taxe représente les kamas dépensés lors de la mise en vente en HDV (uniquement les items marqués vendus).</p>
-    </div>
-
-    <div class="grid gap-4">
-        <img class="rounded-lg" src="{{ asset('documentation/total_sell.webp') }}" alt="Image card Mis en vente">
-        <h3 class="text-xl underline">Mis en vente :</h3>
-        <p>Mis en vente représente la totalité des kamas que vous avez mis en vente.</p>
+    <div class="flex items-center space-x-2">
+        <img class="w-72" src="{{ asset('documentation/total_sell.webp') }}" alt="Image card Mis en vente">
+        <p>
+            <span class="text-tertiary-400 dark:text-tertiary-400">Mis en vente :</span>
+            Mis en vente représente la totalité des kamas que vous avez mis en vente.
+        </p>
     </div>
 </div>
