--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -65,7 +65,9 @@
 
     <section class="flex-1 w-[calc(100%-74px)] p-4 space-y-4 md:space-y-6 pb-8">
         {% include('includes/navbar.html.twig') %}
+        {{ wo_render_breadcrumbs() }}
         {% block body %}
+
 
         {% endblock %}
     </section>
