--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -1,14 +1,17 @@
 <nav class="p-4 bg-gray-50 wrapper wrapper-style sticky top-6 z-20">
     <div class="flex flex-wrap justify-between items-center w-full">
-        <div class="flex">
+        <div class="flex items-center">
             <img class="md:hidden w-6 h-6 mr-4" src="{{ asset('uploads/logo.svg') }}" alt="Logo de Monifus">
-            <p class="text-lg text-gray-700 dark:text-gray-200">
-                {% if variable is defined and variable is not null %}
-                    Bonjour, <span class="family text-primary-400 font-bold">{{ app.user.pseudonymeWebsite }}</span>
-                {% else %}
-                    Bonjour, <span class="family text-primary-400 font-bold">Aventurier</span>
-                {% endif %}
-            </p>
+            <div>
+                <p class="text-lg text-gray-700 dark:text-gray-200">
+                    {% if variable is defined and variable is not null %}
+                        Bonjour, <span class="family text-primary-400 font-bold">{{ app.user.pseudonymeWebsite }}</span>
+                    {% else %}
+                        Bonjour, <span class="family text-primary-400 font-bold">Aventurier</span>
+                    {% endif %}
+                </p>
+                <div {{ react_component('UserCount') }}></div>
+            </div>
         </div>
         <button data-collapse-toggle="navbar-solid-bg" type="button" class="inline-flex justify-center items-center ml-3 text-gray-400 rounded-lg md:hidden hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-300 dark:text-gray-400 dark:hover:text-white dark:focus:ring-gray-500" aria-controls="navbar-solid-bg" aria-expanded="false">
             <span class="sr-only">Ouvrir le menu</span>
@@ -56,7 +59,6 @@
                         <span class="ml-6 font-semibold text-sm">Connexion</span>
                     </a>
                 {% endif %}
-
             </div>
         </div>
     </div>
