--- a/assets/styles/components/_tomSelect.scss
+++ b/assets/styles/components/_tomSelect.scss
@@ -289,6 +289,7 @@
   @apply overflow-y-auto overflow-x-hidden max-h-[200px];
   -webkit-overflow-scrolling: touch;
   scroll-behavior: smooth;
+  scrollbar-color: #FF7828 transparent;
 }
 
 .ts-hidden-accessible {
