--- a/templates/monster/show.html.twig
+++ b/templates/monster/show.html.twig
@@ -9,51 +9,70 @@
         <a class="form-submit" href="{{ path('app_record_new') }}">Nouveau record</a>
     </div>
 
-    <table class="w-full text-xs text-left rtl:text-right wrapper wrapper-style">
-        <thead class="text-xs uppercase">
-        <tr class="border-b border-gray-300 dark:border-gray-700">
-            <th scope="col" class="p-2 ">
-                <span class="hidden sm:block text-xs">N°</span>
-                <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">place</span>
-            </th>
-            <th scope="col" class="p-2 ">
-                <span class="hidden sm:block text-xs">Nom du</span>
-                <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">joueur</span>
-            </th>
-            <th scope="col" class="p-2 hidden xl:table-cell">
-                <span class="hidden sm:block text-xs">Temps du</span>
-                <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">record</span>
-            </th>
-            <th scope="col" class="p-2 hidden xl:table-cell">
-                <span class="sm:block text-xs">Date du</span>
-                <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">record</span>
-            </th>
-            <th scope="col" class="p-2 hidden xl:table-cell">
-                <span class="hidden sm:block text-xs">Détails du</span>
-                <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">record</span>
-            </th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for record in records %}
+    <section class="wrapper wrapper-style wrapper-p-0">
+        <table class="w-full text-xs text-left rtl:text-right">
+            <thead class="text-xs uppercase">
             <tr class="border-b border-gray-300 dark:border-gray-700">
-                <td class="p-2 text-sm hidden xl:table-cell">
-                    {% if loop.index == 1 %}
-                        <img class="w-8 h-8" src="{{ asset("uploads/gold.png") }}" alt="Image de pépite d'or">
-                    {% elseif loop.index == 2 %}
-                        <img class="w-8 h-8" src="{{ asset("uploads/iron.png") }}" alt="Image de pépite de fer">
-                    {% elseif loop.index == 3 %}
-                        <img class="w-8 h-8" src="{{ asset("uploads/bronze.png") }}" alt="Image de pépite de bronze">
-                    {% else %}
-                        <span class="pl-3">{{ loop.index }}</span>
-                    {% endif %}
-                </td>
-                <td class="p-2 text-sm hidden xl:table-cell">{{ record.user.pseudonymeWebsite }}</td>
-                <td class="p-2 text-sm hidden xl:table-cell">{{ record.time|date('H:i:s') }}</td>
-                <td class="p-2 text-sm hidden xl:table-cell">{{ record.createdAt|date('d-m-Y') }}</td>
-                <td class="p-2 text-sm hidden xl:table-cell"><a class="text-tertiary-400 hover:underline" href="{{ path('app_record_show', {'id': record.id}) }}">Voir</a></td>
+                <th scope="col" class="p-2 ">
+                    <span class="hidden sm:block text-xs">N°</span>
+                    <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">place</span>
+                </th>
+                <th scope="col" class="p-2 ">
+                    <span class="hidden sm:block text-xs">Profil</span>
+                    <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">joueur</span>
+                </th>
+                <th scope="col" class="p-2 hidden xl:table-cell">
+                    <span class="hidden sm:block text-xs">Temps du</span>
+                    <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">record</span>
+                </th>
+                <th scope="col" class="p-2 hidden xl:table-cell">
+                    <span class="sm:block text-xs">Date du</span>
+                    <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">record</span>
+                </th>
+                <th scope="col" class="p-2 hidden xl:table-cell">
+                    <span class="hidden sm:block text-xs">Détails du</span>
+                    <span class="text-primary-400 text-lg mt-1 drop-shadow-2xl family">record</span>
+                </th>
             </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for record in records %}
+                <tr class="border-b border-gray-300 dark:border-gray-700">
+                    <td class="p-2 text-sm table-cell">
+                        {% if loop.index == 1 %}
+                            <img class="w-8 h-8" src="{{ asset("uploads/gold.png") }}" alt="Image de pépite d'or">
+                        {% elseif loop.index == 2 %}
+                            <img class="w-8 h-8" src="{{ asset("uploads/iron.png") }}" alt="Image de pépite de fer">
+                        {% elseif loop.index == 3 %}
+                            <img class="w-8 h-8" src="{{ asset("uploads/bronze.png") }}" alt="Image de pépite de bronze">
+                        {% else %}
+                            <span class="pl-3">{{ loop.index }}</span>
+                        {% endif %}
+                    </td>
+                    <td class="p-2 text-sm table-cell">
+                        {% set profileImage = record.user.profilePicture ? ('images/profiles/' ~ record.user.profilePicture) : 'uploads/profil_thumb.png' %}
+                        <a href="#" class="block rounded-full w-6 h-6 bg-cover bg-center border-2 border-gray-300 dark:border-gray-700 hover:border-primary-400 dark:hover:border-primary-400 transition duration-300" style="background-image:url('{{ asset(profileImage) }}')"></a>
+                    </td>
+                    <td class="p-2 text-sm hidden xl:table-cell">
+                        <div class="flex items-center">
+                            {{ record.time|date('H:i:s') }}
+                            <i data-feather="clock" class="ml-2 w-4 hidden lg:block"></i>
+                        </div>
+                    </td>
+                    <td class="p-2 text-sm hidden xl:table-cell">
+                        <div class="flex items-center">
+                            {{ record.createdAt|date('d-m-Y') }}
+                            <i data-feather="calendar" class="ml-2 w-4 hidden lg:block"></i>
+                        </div>
+                    </td>
+                    <td class="p-2 text-sm hidden xl:table-cell">
+                        <a class="text-tertiary-400 hover:underline" href="{{ path('app_record_show', {'id': record.id}) }}">
+                            <i data-feather="eye" class="w-5"></i>
+                        </a>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </section>
 {% endblock %}
