:sparkles: Slider to react + tutorial

--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="p-4 bg-gray-50 wrapper wrapper-style sticky top-6 z-20">
+<nav class="p-4 bg-gray-50 wrapper wrapper-style sticky z-20">
     <div class="flex flex-wrap justify-between items-center w-full">
         <div class="flex items-center">
             <img class="md:hidden w-6 h-6 mr-4" src="{{ asset('uploads/logo.svg') }}" alt="Logo de Monifus">
