--- a/templates/monitor/index.html.twig
+++ b/templates/monitor/index.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <h1 class="text-center">Liste des Moniteurs</h1>
 
-    <div class="flex justify-center">
+    {{ include('includes/documentation.html.twig') }}
+
+    <div class="flex justify-center flex-col items-center space-y-4">
         <a class="form-submit" href="{{ path('app_monitor_new') }}">Créer Moniteur</a>
     </div>
 
@@ -24,7 +26,7 @@
                 <!-- Les moniteurs seront chargés ici -->
             </div>
         {% else %}
-            <p>Pour ajouter une ressource cliquez sur le bouton</p>
+            <p class="text-center">Pour voir une ressource, ajoutez un moniteur</p>
         {% endif %}
     </section>
 {% endblock %}
