--- a/templates/record/index.html.twig
+++ b/templates/record/index.html.twig
@@ -4,9 +4,13 @@
 
 {% block body %}
     <h1 class="text-center">Monstres avec Records</h1>
+
+    {{ include('includes/documentation.html.twig') }}
+
     <div class="flex justify-center">
         <a class="form-submit" href="{{ path('app_record_new') }}">Nouveau record</a>
     </div>
+
     <section class="grid gap-4 lg:grid-cols-3 xl:grid-cols-4">
         {% for monster in monsters %}
             <a class="wrapper wrapper-style hover:shadow-2xl transition duration-300 relative grid gap-2" href="{{ path('app_monster_show', {'id': monster.id}) }}">
