--- a/templates/record/new.html.twig
+++ b/templates/record/new.html.twig
@@ -5,6 +5,8 @@
 {% block body %}
     <h1 class="text-center">Créer un record</h1>
 
+    {{ include('includes/documentation.html.twig') }}
+
     <section class="wrapper wrapper-style">
         {{ include('record/includes/_form.html.twig') }}
     </section>
