--- a/templates/includes/navbar.html.twig
+++ b/templates/includes/navbar.html.twig
@@ -13,10 +13,12 @@
                 <div {{ react_component('UserCount') }}></div>
             </div>
         </div>
+
         <button data-collapse-toggle="navbar-solid-bg" type="button" class="inline-flex justify-center items-center ml-3 text-gray-400 rounded-lg md:hidden hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-300 dark:text-gray-400 dark:hover:text-white dark:focus:ring-gray-500" aria-controls="navbar-solid-bg" aria-expanded="false">
             <span class="sr-only">Ouvrir le menu</span>
             <svg class="w-6 h-6 text-gray-700 dark:text-gray-200" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
         </button>
+
         <div class="hidden w-full" id="navbar-solid-bg">
             <div class="grid gap-4 pt-4">
                 <a href="{{ path('app_home') }}" class="nav-item">
@@ -63,3 +65,21 @@
         </div>
     </div>
 </nav>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const toggleButton = document.querySelector('[data-collapse-toggle="navbar-solid-bg"]');
+        const menu = document.getElementById('navbar-solid-bg');
+
+        toggleButton.addEventListener('click', function() {
+            if (menu.classList.contains('hidden')) {
+                menu.classList.remove('hidden');
+                toggleButton.setAttribute('aria-expanded', 'true');
+            } else {
+                menu.classList.add('hidden');
+                toggleButton.setAttribute('aria-expanded', 'false');
+            }
+        });
+    });
+
+</script>
